adding new robotics equipment journey iterations

--- a/app/views/robotics/current/equipment-eligibility.html
+++ b/app/views/robotics/current/equipment-eligibility.html
@@ -28,7 +28,7 @@
             <fieldset class="govuk-fieldset" aria-describedby="robotics-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h1 class="govuk-fieldset__heading">
-                  Which robotic or automatic items does your project need?
+                  Which eligibility criteria does your automatic technology meet?
                 </h1>
               </legend>
 
