--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -41,7 +41,7 @@
        </div>
        <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="other-robotic" name="other-robotic-radio" type="radio" value="yes" data-aria-controls="conditional-other-robotic"{{ checked("other-robotic-radio", "yes") }}>
+        <input class="govuk-radios__input" id="other-robotic" name="other-robotic-radio" type="radio" value="Yes" data-aria-controls="conditional-other-robotic">
         <label class="govuk-label govuk-radios__label" for="other-robotic-radio">
           Yes
         </label>
@@ -61,7 +61,7 @@
         </div>
         <div class="govuk-radios govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="other-robotic-1" name="other-robotic-radio" type="radio" value="no" {{ checked("other-robotic-radio", "no") }}>
+            <input class="govuk-radios__input" id="other-robotic-1" name="other-robotic-radio" type="radio" value="No">
             <label class="govuk-label govuk-radios__label" for="project-purchase-1">
                No
             </label>
