--- a/app/views/robotics/current/robotic-items-old.html
+++ b/app/views/robotics/current/robotic-items-old.html
@@ -39,71 +39,68 @@
 
 
             <div id="robotics-hint" class="govuk-hint">
-              Select the items your project needs
+              Select all the items your project needs
             </div>
 
-            <div class="govuk-radios" data-module="govuk-radios">
-
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Harvesting equipment">
-                <label class="govuk-label govuk-radios__label" for="robotic-equipment">
+            
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="robotic-equipment" type="checkbox" value="Harvesting equipment">
+                <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-1">
                   Harvesting equipment
                 </label>
               </div>
 
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Weeding equipment">
-                <label class="govuk-label govuk-radios__label" for="robotic-equipment">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment" type="checkbox" value="Weeding equipment">
+                <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-2">
                   Weeding equipment
                 </label>
               </div>
 
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Spraying equipment">
-                <label class="govuk-label govuk-radios__label" for="robotic-equipment">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment" type="checkbox" value="Spraying equipment">
+                <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
                   Spraying equipment
                 </label>
               </div>
 
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value=" Driverless tractor or platform">
-                <label class="govuk-label govuk-radios__label" for="robotic-equipment">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment" type="checkbox" value="Driverless tractor or platform">
+                <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
                   Driverless tractor or platform
                 </label>
               </div>
 
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Voluntary robotic milking system">
-                <label class="govuk-label govuk-radios__label" for="robotic-equipment">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Voluntary robotic milking system">
+                <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
                   Voluntary robotic milking system
                 </label>
               </div>
 
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Feeding system">
-                <label class="govuk-label govuk-radios__label" for="robotic-equipment">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="robotic-equipment-6" name="robotic-equipment" type="checkbox" value="Feeding system">
+                <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-6">
                   Feeding system
                 </label>
               </div>
 
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Transplanting">
-                <label class="govuk-label govuk-radios__label" for="robotic-equipment">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Transplanting">
+                <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-7">
                   Transplanting
                 </label>
-              </div>
-
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="robotic-equipment-1" name="robotic-equipment" type="radio" value="Other robotic technology">
-                <label class="govuk-label govuk-radios__label" for="robotic-equipment">
+              </div>     
+              
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="other-equipment" name="robotic-equipment" type="checkbox" value="Other robotic equipment">
+                <label class="govuk-label govuk-checkboxes__label" for="other-equipment">
                   Other robotic or automatic technology
                 </label>
-              </div>
-
-
+              </div>   
+            
             </div>
-
-          
 
 
             
