--- a/app/views/robotics/current/equipment-type.html
+++ b/app/views/robotics/current/equipment-type.html
@@ -40,7 +40,7 @@
               <li>be able to control its actuators (the devices that move robot joints)</li>
               <li>work in a continuous loop</li>
             </ul>
-            <div class="govuk-radios">
+            <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="equipment-type" name="equipment-type" type="radio" value="Robotic">
                 <label class="govuk-label govuk-radios__label" for="equipment-type">
