--- a/app/views/robotics/current/farming-type.html
+++ b/app/views/robotics/current/farming-type.html
@@ -36,7 +36,7 @@ What is your project about?
                       }
                   },
                   hint: {
-                    html: "<p>If you want to apply for both a slurry project and a robotics project, you must submit 2 separate applications.</p> <p>The maximum grant amount for both projects together is £500,000.</p>Select one option"
+                    html: "<p>If you want to apply for both a robotics project and a solar project, you must submit two separate applications.</p> <p>The maximum grant amount for both projects together is £500,000.</p>Select one option"
                 },
 
                   items: [
