--- a/app/views/robotics/current/introducing-innovation.html
+++ b/app/views/robotics/current/introducing-innovation.html
@@ -62,10 +62,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p>RPA wants to fund projects that:
-            <ul class="govuk-list govuk-list--bullet">
-              <li>introduce innovation </li>
-        </ul></p>
+          <p>RPA wants to fund projects that introduce innovation.</p>
 
       </div>
       </div>
