--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -27,18 +27,18 @@
          <h1 class="govuk-fieldset__heading">
            Does your other robotic technology fit the eligibility criteria?
          </h1>
-       </legend>
-       <div id="other-robotic-hint" class="govuk-hint">
-        All items must:
-        <p>
-          <ul class="govuk-list govuk-list--bullet govuk-hint">
+       </legend>       
+        
+        <p>All items must:</p>
+          <ul class="govuk-list govuk-list--bullet">
             <li>have a sensing system and can understand their environment</li>
             <li>make decisions and plan</li>
             <li>can control its actuators (the devices that move robot joints)</li>
             <li>work in a continuous loop</li>
           </ul>
-        </p>
-       </div>
+        
+        <p>Equipment powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative</p>
+       
        <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="other-robotic" name="other-robotic-radio" type="radio" value="Yes" data-aria-controls="conditional-other-robotic">
