--- a/app/views/robotics/current/planning-permission.html
+++ b/app/views/robotics/current/planning-permission.html
@@ -30,33 +30,33 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Does the project need planning permission?
+                Does the project have planning permission?
               </h1>
             </legend>
             <br>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="Not needed" {{ checked("planning-permission", "Not needed") }}>
+                <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="Not needed">
                 <label class="govuk-label govuk-radios__label" for="planning-permission">
                   Not needed
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="Secured" {{ checked("planning-permission", "Secured") }}>
+                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="Secured">
                 <label class="govuk-label govuk-radios__label" for="planning-permission-2">
                   Secured
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="maybe" {{ checked("planning-permission", "maybe") }}>
+                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="maybe">
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Should be in place by 31 December 2022
+                  Should be in place by the time I make my full application 
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="No" {{ checked("planning-permission", "No") }}>
+                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="No">
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Will not be in place by 31 December 2022
+                  Will not be in place by the time I make my full application 
                 </label>
               </div>
             </div>
@@ -73,9 +73,9 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>You must have applied for planning permission before you submit a full application. <br><br>Any planning permission must be in place by 31 December 2022.
-          </p>
-          <a href="#">
+          <p>You must have secured planning permission before you submit a full application.</p>
+          <p>The application deadline is 31 April 2024</p>
+          
           </a>
       </div>
     </div>
