--- a/app/views/robotics/current/project-items.html
+++ b/app/views/robotics/current/project-items.html
@@ -42,8 +42,8 @@
 <p class="govuk-hint">Select all the items your project needs</p>
   <div class="govuk-checkboxes">
     <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment2" type="checkbox" value="Advanced ventilation control units">
-      <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-2">
+      <input class="govuk-checkboxes__input" id="project-items-2" name="project-items" type="checkbox" value="Advanced ventilation control units">
+      <label class="govuk-label govuk-checkboxes__label" for="project-items-2">
         Advanced ventilation control units
       </label>
       <div id="advanced-ventilation-control-units-hint" class="govuk-hint govuk-radios__hint">
@@ -52,8 +52,8 @@
     </div>
 
       <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment2" type="checkbox" value="Wavelength-specific LED lighting">
-        <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
+        <input class="govuk-checkboxes__input" id="project-items-3" name="project-items" type="checkbox" value="Wavelength-specific LED lighting">
+        <label class="govuk-label govuk-checkboxes__label" for="project-items-3">
           Wavelength-specific LED lighting for horticultural crops
         </label>
         <div id="wavelength-specific-LED-lighting-hint" class="govuk-hint govuk-radios__hint">
@@ -62,9 +62,9 @@
             </div>
 
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment2" type="checkbox" value="Robotic equipment item" checked>
-              <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
-                Robotic equipment item
+              <input class="govuk-checkboxes__input" id="project-items-4" name="project-items" type="checkbox" value="Robotic or automatic technology">
+              <label class="govuk-label govuk-checkboxes__label" for="project-items-4">
+                Robotic or automatic technology
               </label>
 
     </div>
