--- a/app/views/robotics/current/start.html
+++ b/app/views/robotics/current/start.html
@@ -42,14 +42,31 @@
           <ul class="govuk-list govuk-list--bullet">
             <li>you are a farmer or agricultural contractor</li>
             <li>your business is registered in England or you will do the grant-funded work in England</li>
-            <li>estimate the project costs are over £87,500</li>
+            <li>you estimate the project costs are over £62,500</li>
           </ul>
-          <p class="govuk-body">Agricultural contractors can only use the grant for buying robotics and innovation equipment.</p>
+          <p class="govuk-body">Agricultural contractors can only use the grant for buying robotic and automatic technology.</p>
         </div>
 
-        <p><div class="govuk-inset-text">
-  If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
-</div></p>
+        <p>You can apply for up to:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>40% of estimated costs of robotic and automatic technology</li>
+            <li>25% of estimated costs to buy and install a solar PV system </li>            
+          </ul>
+
+          <p>The minimum grant you can claim is £25,000 (40% of £62,500).</p>
+
+          <p>The maximum grant for:</p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li>robotic and automatic technology is £500,000</li>
+            <li>a solar PV system is £100,000 </li>
+          </ul>
+
+          <p>If you want to apply for both robotic techology and solar PV system grant funding, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.</p>
+        
+          <div class="govuk-inset-text">
+          If your project is eligible, you will be able to submit your online application to the Rural Payment Agency (RPA).
+        </div>
 
 
       </div>
@@ -66,8 +83,8 @@
       <h3 class="govuk-heading-m">Before you start</h3>
       <p>To  use the checker,  you need:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>information about your business (for example, number of employees and turnover)</li>
-        <li>information about the project (for example, volume of slurry or digestate, the impact the project will have)</li>
+        <li>information about your business (for example, number of employees, turnover)</li>
+        <li>information about the project (for example, the impact the project will have)</li>
         <li>a list of the items you’d like to buy for the project</li>
         <li>an estimate of the total cost of the items</li>
       </ul>
@@ -76,7 +93,7 @@ application will time out and you  will have to start again. </p>
     </div>
     <div class="govuk-body">
       <h3 class="govuk-heading-m govuk-!-margin-top-2">Problems using the online service</h3>
-      <p class="govuk-body">If you have any problems  using the online  service, contact the RPA.</p>
+      <p class="govuk-body">If you have any problems  using the online  service, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
       <h3 class="govuk-heading-s">Telephone</h3>
 
       <ul class="govuk-list">
