--- a/app/views/robotics/current/tenancy.html
+++ b/app/views/robotics/current/tenancy.html
@@ -69,7 +69,7 @@
           <h2 class="app-step-nav-related__heading">
             <span class="app-step-nav-related__pretitle">Eligibility</span>
             </h2>
-            <p>The land must be owned or have a tenancy in place until 2027 before starting the project.</p>
+            <p>If you are a tenant farmer, you have the option to ask your landlord to underwrite your agreement.</p>
             <a href="#">
             </a>
 
