--- a/app/views/robotics/current/answers.html
+++ b/app/views/robotics/current/answers.html
@@ -87,6 +87,23 @@
       </thead>
       <tbody class="govuk-table__body">
 
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Robotic and automatic technology
+          <br/><br/>
+          <ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
+            <li>Harvesting equipment</li>
+            <li>Weeding equipment</li>
+          </ul>
+          </th>
+          <td class="govuk-table__cell">Average</td>
+          <td class="govuk-table__cell">
+            <p class="govuk-body govuk-!-font-size-16">
+              Improve productivity<br>
+            Introduce innovation</p>
+          </td>
+          <td class="govuk-table__cell"><a href="#">Change</td>
+        </tr>
+
 {% if data['wider-farming'] %}
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Data analytics to improve productivity
