--- a/app/views/robotics/current/equipment-eligibility.html
+++ b/app/views/robotics/current/equipment-eligibility.html
@@ -36,7 +36,7 @@
   
                 
               <div id="robotics-hint" class="govuk-hint">
-                Select all applicable criteria
+                Select all that apply
               </div>
 
               
@@ -102,7 +102,7 @@
      <h2 class="app-step-nav-related__heading">
       <span class="app-step-nav-related__pretitle">Eligibility</span>
       </h2>
-      <p>Automatic items must meet at least two criteria to be eligible for funding.</p>
+      <p>Automatic items must meet at least 2 criteria to be eligible for grant funding.</p>
       
 
   </div>
