--- a/app/views/robotics/current/project-start.html
+++ b/app/views/robotics/current/project-start.html
@@ -44,7 +44,7 @@ Have you already started work on the project?
                     Yes, we have begun project work
                     </label>
                     <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-                      For example, digging, signing contracts, placing orders
+                      For example, started construction work, signing contracts, placing orders
                     </div>
                   </div>
                   <div class="govuk-radios__item">
@@ -58,11 +58,18 @@ Have you already started work on the project?
               </fieldset>
             </div>
 
+            <div class="govuk-warning-text">
+              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+              <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                You must not start project work or commit to project costs before receiving your funding agreement.
+              </strong>
+            </div>
+
 
     <p> <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
-
-
+  </form>
 
   </div>
   <div class="govuk-grid-column-one-third">
@@ -91,7 +98,7 @@ can:
 
 
 
-    </form>
+    
   </div>
 
 
