--- a/app/views/robotics/current/robotic-items.html
+++ b/app/views/robotics/current/robotic-items.html
@@ -29,17 +29,15 @@
           <fieldset class="govuk-fieldset" aria-describedby="robotics-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Which robotic or automatic items does your project need?
+                What robotic or automatic technology does your project need?
               </h1>
             </legend>
 
-            <p>
-              Equipment powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative
-            </p>
+            <p>Technology powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative.</p>
 
 
             <div id="robotics-hint" class="govuk-hint">
-              Select the items your project needs
+              If you need multiple items, you can add another item later in the checker.
             </div>
 
             <div class="govuk-radios" data-module="govuk-radios">
