other robotic items journey changes

--- a/app/views/robotics/current/energy-source.html
+++ b/app/views/robotics/current/energy-source.html
@@ -30,7 +30,7 @@
           What type of energy will you use?
         </h1>
       </legend>
-      <p>Equipment powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative
+      <p class="govuk-hint">Equipment powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative
       </p>
       <div id="energy-source-hint" class="govuk-hint">Select up to 2 options</div>
       <div class="govuk-checkboxes">
@@ -85,11 +85,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p>RPA wants to fund projects that:
-            <ul class="govuk-list govuk-list--bullet">
-              <li>improve the environment</li>
-            </ul>
-          </p>
+          <p>RPA wants to fund projects that improve the environment.</p>
       </div>
       </div>
   </div>
