--- a/app/views/robotics/current/equipment-type.html
+++ b/app/views/robotics/current/equipment-type.html
@@ -33,8 +33,9 @@
                 Is the technology robotic or automatic?
               </h1>
             </legend>
-            <p>To be eligible, your robotic technology must:</p>
-            <ul class="govuk-list govuk-list--bullet">
+
+            <p class="govuk-hint">To be eligible, your robotic technology must:</p>
+            <ul class="govuk-list govuk-list--bullet govuk-hint">
               <li>have a sensing system and can understand its environment</li>
               <li>make decisions and plan</li>
               <li>be able to control its actuators (the devices that move robot joints)</li>
