--- a/app/views/robotics/current/robotic-items.html
+++ b/app/views/robotics/current/robotic-items.html
@@ -33,8 +33,7 @@
               </h1>
             </legend>
 
-            <p>Technology powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative.</p>
-
+            <p class="govuk-hint">Technology powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative.</p>
 
             <div id="robotics-hint" class="govuk-hint">
               If you need multiple items, you can add another item later in the checker.
