--- a/app/views/robotics/current/start.html
+++ b/app/views/robotics/current/start.html
@@ -53,17 +53,11 @@
             <li>25% of estimated costs to buy and install a solar PV system </li>            
           </ul>
 
-          <p>The minimum grant you can claim is £25,000 (40% of £62,500).</p>
-
-          <p>The maximum grant for:</p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>robotic and automatic technology is £500,000</li>
-            <li>a solar PV system is £100,000 </li>
-          </ul>
-
+          <p>For robotic and automatic technology the maximum grant you can claim is £500,000. The minimum grant is £25,000.</p>
+          <p>For a solar PV system the maximum grant you can claim is £100,000. The minimum grant is £15,000.</p>
           <p>If you want to apply for both robotic techology and solar PV system grant funding, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.</p>
-        
+
+      
           <div class="govuk-inset-text">
           If your project is eligible, you will be able to submit your online application to the Rural Payment Agency (RPA).
         </div>
