--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -25,48 +25,37 @@
      <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
          <h1 class="govuk-fieldset__heading">
-           Does your other robotic technology fit the eligibility criteria?
+          What is your other {{ data['equipment-type'] | lower }} technology?
          </h1>
        </legend>       
-        
-        <p>All items must:</p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>have a sensing system and can understand their environment</li>
-            <li>make decisions and plan</li>
-            <li>can control its actuators (the devices that move robot joints)</li>
-            <li>work in a continuous loop</li>
-          </ul>
-        
-        <p>Equipment powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative</p>
+                
+        <p class="govuk-hint">Equipment powered by fossil fuels will only be funded where there is no commercially available electric or renewable energy alternative</p>
+      
+
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="two-thirds">
+            Brand (optional)
+          </label>
+          <input class="govuk-input govuk-!-width-two-thirds" id="two-thirds" name="twoThirds" type="text">
+        </div>
+
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="two-thirds">
+            Model (optional)
+          </label>
+          <input class="govuk-input govuk-!-width-two-thirds" id="two-thirds" name="twoThirds" type="text">
+        </div>
+
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="more-detail">
+            Enter a brief description of the item and benefit to your business
+          </label>
+          <textarea class="govuk-textarea" id="more-detail" name="moreDetail" rows="5"></textarea>
+        </div>
        
-       <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="other-robotic" name="other-robotic-radio" type="radio" value="Yes" data-aria-controls="conditional-other-robotic">
-        <label class="govuk-label govuk-radios__label" for="other-robotic-radio">
-          Yes
-        </label>
-      </div>
-        <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-other-robotic">
-            <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="250">
-              <div class="govuk-form-group">
-                <label class="govuk-label" for="label-as-page-heading">
-                  Enter your item, including the name, a brief description and the benefit to your business
-                </label>
-                <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="other-robotic-item" rows="10" aria-describedby="word-count-info">{{ data['other-robotic-item'] }}</textarea>
-              </div>
-              <div id="word-count-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
-                You can enter up to 250 characters
-              </div>
-            </div>
-        </div>
-        <div class="govuk-radios govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="other-robotic-1" name="other-robotic-radio" type="radio" value="No">
-            <label class="govuk-label govuk-radios__label" for="project-purchase-1">
-               No
-            </label>
-          </div>
-        </div>
+      
+        
+        
      </fieldset>
    </div>
      <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
