--- a/app/views/robotics/current/remaining-costs.html
+++ b/app/views/robotics/current/remaining-costs.html
@@ -31,13 +31,13 @@ Meeting the remaining project costs
 
   <div class="govuk-radios govuk-radios--inline">
     <div class="govuk-radios__item">
-      <input class="govuk-radios__input" id="remaining-costs" name="remaining-costs" type="radio" value="yes" {{ checked("remaining-costs", "yes") }}>
+      <input class="govuk-radios__input" id="remaining-costs" name="remaining-costs" type="radio" value="yes">
       <label class="govuk-label govuk-radios__label" for="remaining-costs">
         Yes
       </label>
     </div>
     <div class="govuk-radios__item">
-      <input class="govuk-radios__input" id="remaining-costs-2" name="remaining-costs" type="radio" value="no" {{ checked("remaining-costs", "no") }}>
+      <input class="govuk-radios__input" id="remaining-costs-2" name="remaining-costs" type="radio" value="no">
       <label class="govuk-label govuk-radios__label" for="remaining-costs-2">
         No
       </label>
@@ -63,9 +63,16 @@ Meeting the remaining project costs
           </h2>
           <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
 
-<p>You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme. </p>
-          <a href="#">
-          </a>
+      <p>You can use:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>loans</li>
+        <li>overdrafts</li>
+        <li>Basic Payment Scheme</li>
+        <li>Countryside Stewardship Scheme</li>
+      </ul>
+            
+         
 
       </div>
 
