--- a/app/views/robotics/index.html
+++ b/app/views/robotics/index.html
@@ -33,8 +33,8 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
         <p class='govuk-heading-m'>Round 2 - Version 1 (current)</p>
-          <p class='govuk-list app-list--definition'>The version shown in this prototype includes changes to the robotics equipment pages.<br>
-            <span class="govuk-body govuk-!-font-size-14"># Last updated on 18 September 2023<br/>
+          <p class='govuk-list app-list--definition'>The version shown in this prototype includes changes to the robotics equipment journey and the addition of the solar journey<br>
+            <span class="govuk-body govuk-!-font-size-14"># Last updated on 4 October 2023<br/>
             </span></p>
 
 
