other robotic equipment content change

--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -34,14 +34,14 @@
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="two-thirds">
-            Brand (optional)
+            Brand 
           </label>
           <input class="govuk-input govuk-!-width-two-thirds" id="two-thirds" name="twoThirds" type="text">
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="two-thirds">
-            Model (optional)
+            Model
           </label>
           <input class="govuk-input govuk-!-width-two-thirds" id="two-thirds" name="twoThirds" type="text">
         </div>
