small content changes

--- a/app/views/robotics/current/solar-system-size.html
+++ b/app/views/robotics/current/solar-system-size.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  What size of solar PV system do you need? 
+  How much energy will your solar PV system output 
 {% endblock %}
 
 {% block beforeContent %}
@@ -32,7 +32,7 @@
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              What size of solar PV system do you need? 
+              How much energy will your solar PV system output?
             </h1>
           </legend>
           <p class="govuk-hint">Select the size of your solar PV system</p>
